# codex-hackathon

./: .env.example  .gitignore  MANIFEST.in  PR-Grounding-Gate-Master-Doc.md  README.md  agent.md  cli.py  config.py  env.md  explainer.py  export_runs.py  fetch_pr.py  github_commenter.py  launch_workspace.bat  logging_agent.py  mcp_server.py  proposer.py  pyproject.toml  requirements.txt  run_sample.py  verdict.py  worklog.md
.agents/: AGENTS.md
.github/workflows/: pages.yml  slopper.yml
benchmark/: cve_adapter.py  results.csv  results.md
demo_ui/: __init__.py  generator.py  index.html
docs/: byok_cli_web_demo_flow.md  cli_installation.md  deployable_demo_plan.md  future_scope.md  model_fallback_and_deployment_plan.md  online_demo_plan.md  pr_research_matrix.md
gate/: __init__.py  blind_spot_check.py  ci_sniffer.py  consistency_check.py  coverage_check.py  image_text_extract.py  invisible_unicode_check.py  test_exec_check.py  unicode_sanitize.py
our_brain/: AGENTS.md  PLAYBOOK.md
runs/: 1_clean_grounded.json  2_padded_coverage.json  3_mismatched_desc.json  4_poisoned_comment.json  5_protobuf_ruby_real.json
samples/: 1_clean_grounded.diff  1_clean_grounded.meta.json  2_padded_coverage.diff  2_padded_coverage.meta.json  3_mismatched_desc.diff  3_mismatched_desc.meta.json  4_poisoned_comment.diff  4_poisoned_comment.meta.json  5_protobuf_ruby_real.diff  5_protobuf_ruby_real.meta.json  6_tflite_bounds_real.diff  6_tflite_bounds_real.meta.json  7_npm_registry_path_real.diff  7_npm_registry_path_real.meta.json  8_protobuf_php_hardening_real.diff  8_protobuf_php_hardening_real.meta.json
tests/: test_smoke.py
vite_ui/: index.html  package-lock.json  package.json  vite.config.js
(+11 files in other folders)
